fixing css building

--- a/site/themes/hugo-future-imperfect-slim/layouts/partials/head.html
+++ b/site/themes/hugo-future-imperfect-slim/layouts/partials/head.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
-      <link rel="stylesheet" href="{{ "css/main.min.css" | relURL }}">
+      <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
       <link rel="stylesheet" href="{{ "css/add-on.css" | relURL }}">
     {{ else }}
       <link rel="stylesheet" href="{{ . | relURL }}">
