--- a/site/themes/hugo-future-imperfect-slim/static/css/main.css
+++ b/site/themes/hugo-future-imperfect-slim/static/css/main.css
@@ -703,6 +703,8 @@ div.grecaptcha-badge {
   margin: 1.5em auto;
   padding: 1em;
   max-width: 55em; }
+  .post img {
+    max-width: 100%; }
   .post > header {
     border-bottom: solid 1px rgba(160, 160, 160, 0.3);
     margin: 1em 1em 0 1em;
