--- a/site/themes/hugo-future-imperfect-slim/static/css/main.scss
+++ b/site/themes/hugo-future-imperfect-slim/static/css/main.scss
@@ -907,6 +907,9 @@ textarea {
    margin: 1.5em auto;
    padding: 1em;
    max-width: 55em;
+   img {
+     max-width: 100%;
+   }
    > header {
      border-bottom: solid 1px rgba(160, 160, 160, 0.3);
      margin: 1em 1em 0 1em;
